# vibechess

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  backlog.md  oracle-pgn-import-slow.md  progress.md  pyproject.toml
data/: README.md  res8_training_history.md
docs/: ai.md  architecture.md  engine.md  pgn-ingestion.md  swift-backend.md
plans/: central-inference-queue.md  gui-plan.md  oracle-current-pgn-bottleneck-speedups.md  oracle-pgn-import-optimization.md  pgn-import-optimization-components.md  pgn-opt-review-complexity-v2.md  pgn-opt-review-correctness-v2.md  pgn-opt-review-correctness.md  pgn-opt-review-fixes-v2.md  pgn-opt-review-safety-v2.md  pgn-opt-review-safety.md  pgn-opt-worker-component-1.md  pgn-opt-worker-component-2.md  pgn-opt-worker-component-3.md  pgn-opt-worker-component-4.md  pgn-parser-single-legal-gen-plan.md  pgn-parser-single-legal-gen-review-complexity.md  pgn-parser-single-legal-gen-review-correctness.md  pgn-parser-single-legal-gen-review-fixes.md  pgn-parser-single-legal-gen-review-safety.md  pgn-parser-single-legal-gen-worker.md
scripts/: _progress.py  benchmark.py  evaluate.py  mcts_benchmark.py  mlx_inference_benchmark.py  perft.py  pgn_ingest.py  pgn_ingest_benchmark.py  random_game.py  self_play.py  self_play_benchmark.py  train.py
swift/: Package.resolved  Package.swift  README.md
tests/: test_benchmarks.py  test_cli.py  test_engine_primitives.py  test_engine_transition.py  test_fen.py  test_game.py  test_gui_protocol.py  test_legal_moves.py  test_pgn.py  test_pgn_ingest_benchmark.py  test_pgn_stream.py  test_uci.py  (+4 more)
(+123 files in other folders)
