[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinychess"
version = "0.1.0"
description = "A small chess engine and neural-MCTS AI for Apple Silicon macOS."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "flanggut" },
]
keywords = ["chess", "mcts", "machine-learning", "mlx", "swift"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS",
]
dependencies = []

[project.scripts]
tinychess = "tinychess.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["tinychess"]
